// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Test Cases Home Page Renders Correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 2,
      }
    }
  >
    <View />
    <View
      accessible={true}
      clickable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "bottom": 0,
          "height": 20,
          "left": 30,
          "opacity": 1,
          "position": "absolute",
          "right": 0,
          "top": 50,
          "width": 20,
          "zIndex": 100,
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "Font Awesome 5 Free",
            "fontSize": 20,
          }
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "margin": 20,
      }
    }
  >
    <View
      accessible={true}
      clickable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderRadius": 5,
          "borderStyle": "solid",
          "borderWidth": 1,
          "opacity": 1,
          "paddingHorizontal": 10,
          "paddingVertical": 20,
        }
      }
    >
      <View>
        <Text>
          Where To
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`App Test Cases Settings Page Renders Correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "bottom": 0,
        "height": 20,
        "left": 30,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 50,
        "width": 20,
        "zIndex": 100,
      }
    }
  >
    <Text
      style={
        Object {
          "fontFamily": "Font Awesome 5 Free",
          "fontSize": 20,
        }
      }
    >
      
    </Text>
  </View>
  <Text>
    Settings!
  </Text>
</View>
`;

exports[`App Test Cases Where To Page Renders Correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#ebebeb",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 20,
      }
    }
  >
    <View>
      <View
        accessible={true}
        clickable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "fontFamily": "Font Awesome 5 Free",
              "fontSize": 20,
            }
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "paddingTop": 20,
        }
      }
    >
      <Text>
        Where To
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;
